--- a/01-Why-do-we-learn-statistics.qmd
+++ b/01-Why-do-we-learn-statistics.qmd
@@ -28,7 +28,7 @@ To the surprise of many students, statistics is a fairly significant part of a p
 
 <!---A big part of this issue at hand relates to the very idea of statistics. What is it? What's it there for? And why are scientists so bloody obsessed with it? These are all good questions, when you think about it. So let's start with the last one. As a group, scientists seem to be bizarrely fixated on running statistical tests on everything. In fact, we use statistics so often that we sometimes forget to explain to people why we do. It's a kind of article of faith among scientists -- and especially social scientists -- that your findings can't be trusted until you've done some stats. Undergraduate students might be forgiven for thinking that we're all completely mad, because no-one takes the time to answer one very simple question:--->
 
-**為什麼當心理學家要會使用統計？為什麼科學家不能憑**<u>生活常識</u>做研究？
+**為什麼當心理學家要會使用統計？為什麼科學家不能憑<u>生活常識</u>做研究？**
 
 
 <!---
