--- a/08-Estimating-unknown-quantities-from-a-sample.qmd
+++ b/08-Estimating-unknown-quantities-from-a-sample.qmd
@@ -67,41 +67,57 @@ Each of these defines a real group of mind-possessing entities, all of which mig
 
 ### 簡單隨機樣本
 
-Irrespective of how I define the population, the critical point is that the sample is a subset of the population and our goal is to use our knowledge of the sample to draw inferences about the properties of the population. The relationship between the two depends on the procedure by which the sample was selected. This procedure is referred to as a **sampling method** and it is important to understand why it matters.
+不論要採用那種母群的定義，重點是我們要找出代表母群一部分的樣本，還有運用從樣本學到的知識推測母群的性質。樣本和母群的關係建立在選取樣本的的程序。這樣的程序就是**抽樣方法(sampling method)**，理解抽樣方法是正確有效運用推論統計的關鍵。
 
-To keep things simple, let's imagine that we have a bag containing 10 chips. Each chip has a unique letter printed on it so we can distinguish between the 10 chips. The chips come in two colours, black and white. This set of chips is the population of interest and it is depicted graphically on the left of @fig-fig8-1. As you can see from looking at the picture there are 4 black chips and 6 white chips, but of course in real life we wouldn't know that unless we looked in the bag. Now imagine you run the following "experiment": you shake up the bag, close your eyes, and pull out 4 chips without putting any of them back into the bag. First out comes the a chip (black), then the c chip (white), then j (white) and then finally b (black). If you wanted you could then put all the chips back in the bag and repeat the experiment, as depicted on the right hand side of @fig-fig8-1. Each time you get different results but the procedure is identical in each case. The fact that the same procedure can lead to different results each time we refer to as a *random process*.[^08-estimating-unknown-quantities-from-a-sample-1] However, because we shook the bag before pulling any chips out, it seems reasonable to think that every chip has the same chance of being selected. A procedure in which every member of the population has the same chance of being selected is called a **simple random sample**. The fact that we did not put the chips back in the bag after pulling them out means that you can't observe the same thing twice, and in such cases the observations are said to have been sampled **without replacement**.
+我們用一個裝有十顆球的的袋子舉例說明抽樣方法。每顆球各印有一個字母區別，並且被塗上黑色或白色。這十顆球構成的母群能繪製成像 @fig-fig8-1 的示意圖一覽無遺。十顆球裡有四顆黑球和六顆白球，但是請假裝還沒打開袋子之前，我們完全不知道每顆球長什麼樣子。接著我們做一次「想像實驗」：先把袋子拿起來搖幾下，矇起眼睛從袋子裡依序一次一顆，抽出其中四顆球，將他們排在眼前。第一輪我們拿出的是字母a黑球，字母c白球，字母j白球，還有字母b黑球。紀錄完畢再將四顆球放回袋子裡，我們可以重覆同樣的抽球程序數輪，每次紀錄累積就如 @fig-fig8-1 右邊的樣子。如此不斷重覆、結果卻每次不同的抽球程序是一種*隨機程序*。[^08-estimating-unknown-quantities-from-a-sample-1] 我們能認可這是隨機程序的主要理由是每次抽球之前，都要先搖一搖袋子，讓每顆球被抽出的機會是相等的。能讓母群裡的每一份子以相等機會抽出，形成的樣本就是**簡單隨機樣本**。每取出一顆球都不會放回袋子，能確保每一次抽樣得到的樣本不會有兩個同樣的球，這種取樣限制稱為**不放回抽樣**。
+
+
+[^08-estimating-unknown-quantities-from-a-sample-1]: 隨機的數學推導相當繁複，並且已經超出本書的學習範圍。本書不依靠數學公式解說隨機程序，讀者只要理解取樣程序可以不斷重覆，每次取樣結果都不一樣就是一種隨機程序。
+
+<!---Irrespective of how I define the population, the critical point is that the sample is a subset of the population and our goal is to use our knowledge of the sample to draw inferences about the properties of the population. The relationship between the two depends on the procedure by which the sample was selected. This procedure is referred to as a **sampling method** and it is important to understand why it matters.
+
+To keep things simple, let's imagine that we have a bag containing 10 chips. Each chip has a unique letter printed on it so we can distinguish between the 10 chips. The chips come in two colours, black and white. This set of chips is the population of interest and it is depicted graphically on the left of @fig-fig8-1. As you can see from looking at the picture there are 4 black chips and 6 white chips, but of course in real life we wouldn't know that unless we looked in the bag. Now imagine you run the following "experiment": you shake up the bag, close your eyes, and pull out 4 chips without putting any of them back into the bag. First out comes the a chip (black), then the c chip (white), then j (white) and then finally b (black). If you wanted you could then put all the chips back in the bag and repeat the experiment, as depicted on the right hand side of @fig-fig8-1. Each time you get different results but the procedure is identical in each case. The fact that the same procedure can lead to different results each time we refer to as a *random process*.[^08-estimating-unknown-quantities-from-a-sample-1] However, because we shook the bag before pulling any chips out, it seems reasonable to think that every chip has the same chance of being selected. A procedure in which every member of the population has the same chance of being selected is called a **simple random sample**. The fact that we did not put the chips back in the bag after pulling them out means that you can't observe the same thing twice, and in such cases the observations are said to have been sampled **without replacement**. --->
 
 ```{r}
 #| label: fig-fig8-1
 #| fig-align: left
 #| fig-width: 0.9
-#| fig-cap: Simple random sampling without replacement from a finite population
+#| fig-cap: 自有限母群不放回抽樣的可能樣本。
+#Simple random sampling without replacement from a finite population
 knitr::include_graphics("images/fig8-1.png")
 ```
 
-[^08-estimating-unknown-quantities-from-a-sample-1]: The proper mathematical definition of randomness is extraordinarily technical, and way beyond the scope of this book. We'll be non-technical here and say that a process has an element of randomness to it whenever it is possible to repeat the process and get different answers each time.
+為了讓同學更了解抽樣方法如何影響樣本的組合，我們來想像另一種取樣狀況。想像有個五歲小朋友跑進來，擅自打開袋子拿出全部黑球，沒放回去又跑開了。旁邊做紀錄的同學沒注意到還當成是一次實驗結果，如果發生好幾次，就會看到像 @fig-fig8-2 展示的偏誤樣本。請想想如果做實驗的同學每次依照*隨機抽樣規則*抽球，看到四顆球的樣本可能性有多高？抽樣規則確實會影響樣本組成。如果我們了解全是黑球是有偏誤的抽樣方法造成的，那麼這樣的**偏誤樣本**無法有效推測母群的性質！這是為什麼統計學者特別重視資料檔案裡的紀錄是不是來自簡單隨機樣本，隨機樣本的資料進行分析不大需要太多處理。
 
-To help make sure you understand the importance of the sampling procedure, consider an alternative way in which the experiment could have been run. Suppose that my 5-year old son had opened the bag and decided to pull out four black chips without putting any of them back in the bag. This biased sampling scheme is depicted in @fig-fig8-2. Now consider the evidential value of seeing 4 black chips and 0 white chips. Clearly it depends on the sampling scheme, does it not? If you know that the sampling scheme is biased to select only black chips then a sample that consists of only black chips doesn't tell you very much about the population! For this reason statisticians really like it when a data set can be considered a simple random sample, because it makes the data analysis *much* easier.
+<!--- [^08-estimating-unknown-quantities-from-a-sample-1]: The proper mathematical definition of randomness is extraordinarily technical, and way beyond the scope of this book. We'll be non-technical here and say that a process has an element of randomness to it whenever it is possible to repeat the process and get different answers each time. 
+
+To help make sure you understand the importance of the sampling procedure, consider an alternative way in which the experiment could have been run. Suppose that my 5-year old son had opened the bag and decided to pull out four black chips without putting any of them back in the bag. This biased sampling scheme is depicted in @fig-fig8-2. Now consider the evidential value of seeing 4 black chips and 0 white chips. Clearly it depends on the sampling scheme, does it not? If you know that the sampling scheme is biased to select only black chips then a sample that consists of only black chips doesn't tell you very much about the population! For this reason statisticians really like it when a data set can be considered a simple random sample, because it makes the data analysis *much* easier. --->
 
 ```{r}
 #| label: fig-fig8-2
 #| fig-align: left
 #| fig-width: 0.9
-#| fig-cap: Biased sampling without replacement from a finite population
+#| fig-cap: 自有限母群偏誤抽樣的樣本。
+#Biased sampling without replacement from a finite population
 knitr::include_graphics("images/fig8-2.png")
 ```
 
-A third procedure is worth mentioning. This time around we close our eyes, shake the bag, and pull out a chip. This time, however, we record the observation and then put the chip back in the bag. Again we close our eyes, shake the bag, and pull out a chip. We then repeat this procedure until we have 4 chips. Data sets generated in this way are still simple random samples, but because we put the chips back in the bag immediately after drawing them it is referred to as a sample **with replacement**. The difference between this situation and the first one is that it is possible to observe the same population member multiple times, as illustrated in @fig-fig8-3.
+我們再來想像第三種抽樣狀況。這次每輪抽出一顆球之前，先搖一搖袋子，取出一顆球做好紀錄，再放回袋子重新搖一搖袋子，再取出一顆球紀錄，如此重覆直到完成四次紀錄。如此程序取得的樣本也是簡單隨機樣本，因為每次取球都要放回袋子，因此這樣的方法稱為**放回抽樣**。放回抽樣與不放回抽樣的主要差別在於，放回抽樣得到的樣本有可能看到同一顆球在樣本裡出現兩次，如果 @fig-fig8-3 的展示。
+
+<!---A third procedure is worth mentioning. This time around we close our eyes, shake the bag, and pull out a chip. This time, however, we record the observation and then put the chip back in the bag. Again we close our eyes, shake the bag, and pull out a chip. We then repeat this procedure until we have 4 chips. Data sets generated in this way are still simple random samples, but because we put the chips back in the bag immediately after drawing them it is referred to as a sample **with replacement**. The difference between this situation and the first one is that it is possible to observe the same population member multiple times, as illustrated in @fig-fig8-3. --->
 
 ```{r}
 #| label: fig-fig8-3
 #| fig-align: left
 #| fig-width: 0.9
-#| fig-cap: Simple random sampling *with* replacement from a finite population
+#| fig-cap: 自有限母群*放回抽樣*的可能樣本。
+#Simple random sampling *with* replacement from a finite population
 knitr::include_graphics("images/fig8-3.png")
 ```
 
-In my experience, most psychology experiments tend to be sampling without replacement, because the same person is not allowed to participate in the experiment twice. However, most statistical theory is based on the assumption that the data arise from a simple random sample **with replacement**. In real life this very rarely matters. If the population of interest is large (e.g., has more than 10 entities!) the difference between sampling with- and without- replacement is too small to be concerned with. The difference between simple random samples and biased samples, on the other hand, is not such an easy thing to dismiss.
+大多數心理學實驗取得的樣本是*不放回抽樣*的結果，因為同一個人不大能參加同一項實驗兩次。不過，大多數統計理論是建立在**放回抽樣**形成的簡單隨機樣本。現實與理論的差異在多數研究實務並不會有太多影響。如果研究對象的母群組成份子多到一個程度，放回抽樣和不放回抽樣的隨機樣本幾乎沒有差別。另一方面，簡單隨機樣本與偏誤樣本之間的差別，在很多實務狀況裡很難看得出來。
+
+<!---In my experience, most psychology experiments tend to be sampling without replacement, because the same person is not allowed to participate in the experiment twice. However, most statistical theory is based on the assumption that the data arise from a simple random sample **with replacement**. In real life this very rarely matters. If the population of interest is large (e.g., has more than 10 entities!) the difference between sampling with- and without- replacement is too small to be concerned with. The difference between simple random samples and biased samples, on the other hand, is not such an easy thing to dismiss. --->
 
 ### 你知道的樣本並不是簡單隨機樣本
 
