--- a/Prelude-Part-IV.qmd
+++ b/Prelude-Part-IV.qmd
@@ -1,5 +1,10 @@
 # 中場故事 {.unnumbered}
 
+<!--- teaching note: riddle of induction 替代版：某位設計師為展覽製作一個能裝10,000顆球的巨大陶瓷瓶子，展覽告示宣稱瓶子裡有5,000顆白球和5,000顆彩色球，歡迎現場觀眾任意取球測試，看看告示是否為真。
+有兩位觀眾W君與C君彼此約定測試方法，每次取出三顆球，逐次評估告示的真實性。
+這天他們連續測試四次，每次取出的都是三顆白球。W君認為告示是錯的，C君認為還要繼續測試。你認為誰的主張是合理的？ 
+--->
+
 Part IV of the book is by far the most theoretical, focusing as it does on the theory of statistical inference. Over the next three chapters my goal is to give you an introduction to probability theory, sampling and estimation in @sec-Estimating-unknown-quantities-from-a-sample and statistical hypothesis testing in @sec-Hypothesis-testing. Before we get started though, I want to say something about the big picture. Statistical inference is primarily about learning from data. The goal is no longer merely to describe our data but to use the data to draw conclusions about the world. To motivate the discussion I want to spend a bit of time talking about a philosophical puzzle known as the riddle of induction, because it speaks to an issue that will pop up over and over again throughout the book: statistical inference relies on assumptions. This sounds like a bad thing. In everyday life people say things like “you should never make assumptions”, and psychology classes often talk about assumptions and biases as bad things that we should try to avoid. From bitter personal experience I have learned never to say such things around philosophers!
 
 ## 邏輯推理的侷限 {-}
