fix the translation in chapter 8

--- a/08-Estimating-unknown-quantities-from-a-sample.qmd
+++ b/08-Estimating-unknown-quantities-from-a-sample.qmd
@@ -14,7 +14,7 @@ source("header.R")
 
 <!---At the start of the last chapter I highlighted the critical distinction between descriptive statistics and *inferential statistics*. As discussed in @sec-Descriptive-statistics, the role of descriptive statistics is to concisely summarise what we *do* know. In contrast, the purpose of inferential statistics is to "learn what we do not know from what we do". Now that we have a foundation in probability theory we are in a good position to think about the problem of statistical inference. What kinds of things would we like to learn about? And how do we learn them? These are the questions that lie at the heart of inferential statistics, and they are traditionally divided into two "big ideas": estimation and hypothesis testing. The goal in this chapter is to introduce the first of these big ideas, estimation theory, but I'm going to witter on about sampling theory first because estimation theory doesn't make sense until you understand sampling. As a consequence, this chapter divides naturally into two parts, the first three sections are focused on sampling theory, and the last two sections make use of sampling theory to discuss how statisticians think about estimation. --->
 
-## 樣本、母群、抽樣{#sec-sample-population-sampling}
+## 樣本、母群、取樣{#sec-sample-population-sampling}
 
 [中場報告](Prelude-Part-IV.html)提到一則歸納之謎，讓同學從中學習如何建構能判斷故事結局的假設。如果現在你能接受這樣的思考方式，應該能同意任何統計實務都是從接受原始資料的通用假設開始，這就是我們要學習**抽樣理論**的原因。如果說統計理論都是要建立在機率理論的地基之上，抽樣理論則是組建統計理論的材料。有效統計推論所需要的條件都是來自抽樣理論，也就是要達到統計學者們認可的“推論過程”，我們必須清楚說明推論*來自*什麼樣本，推論適用於什麼樣的母群。
 
